[gd_scene load_steps=4 format=3 uid="uid://iakv04hemxrr"]

[ext_resource type="Texture2D" uid="uid://dlk2e0864o4wq" path="res://watering_hole/watering_hole.webp" id="1_0rr34"]
[ext_resource type="Script" path="res://watering_hole/watering_hole.gd" id="1_i2kko"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q1w51"]
size = Vector2(753, 325)

[node name="WateringHole" type="Area2D"]
script = ExtResource("1_i2kko")

[node name="WateringHole" type="Sprite2D" parent="."]
z_index = -900
texture = ExtResource("1_0rr34")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-33.5, 100.5)
shape = SubResource("RectangleShape2D_q1w51")

[node name="FillTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="FillTimer" to="." method="_on_fill_timer_timeout"]
